Cria estrutura do menu

--- a/index.html
+++ b/index.html
@@ -5,5 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jornada Viagens</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="index.html" title="Voltar para a página inicial"
+        ><img
+          src="assets/bussola-jornada-branca.png"
+          alt="Bussola do logo Jornada Viagens na cor preta"
+      /></a>
+      <img src="assets/menu.png" alt="Menu" />
+      <nav>
+        <ul>
+          <li>
+            <a href="blog.html" title="Acessar Blog" target="_blank">Blog</a>
+          </li>
+          <li>
+            <a
+              href="pacotes.html"
+              title="Acessar Pacotes de viagem"
+              target="_blank"
+              >Pacotes de viagem</a
+            >
+          </li>
+          <li>
+            <a href="contato.html" title="Acessar contato" target="_blank"
+              >Contato</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
