--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
     <title>Jornada Viagens</title>
   </head>
   <body>
@@ -13,27 +13,29 @@
           src="assets/bussola-jornada-branca.png"
           alt="Bussola do logo Jornada Viagens na cor preta"
       /></a>
-      <img src="assets/menu.png" alt="Menu" />
-      <nav>
-        <ul>
-          <li>
-            <a href="blog.html" title="Acessar Blog" target="_blank">Blog</a>
-          </li>
-          <li>
-            <a
-              href="pacotes.html"
-              title="Acessar Pacotes de viagem"
-              target="_blank"
-              >Pacotes de viagem</a
-            >
-          </li>
-          <li>
-            <a href="contato.html" title="Acessar contato" target="_blank"
-              >Contato</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <div class="navigation-menu">
+        <img src="assets/menu.png" alt="Menu" />
+        <nav>
+          <ul>
+            <li>
+              <a href="blog.html" title="Acessar Blog" target="_blank">Blog</a>
+            </li>
+            <li>
+              <a
+                href="pacotes.html"
+                title="Acessar Pacotes de viagem"
+                target="_blank"
+                >Pacotes de viagem</a
+              >
+            </li>
+            <li>
+              <a href="contato.html" title="Acessar contato" target="_blank"
+                >Contato</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
   </body>
 </html>
