--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           alt="Bussola do logo Jornada Viagens na cor preta"
       /></a>
       <div class="navigation-menu">
-        <img src="assets/menu.png" alt="Menu" />
+        <label for="menu"><img src="assets/menu.png" alt="Menu" /></label>
+        <input type="checkbox" id="menu" hidden />
         <nav>
           <ul>
             <li>
