--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label for="menu"><img src="assets/menu.png" alt="Menu" /></label>
         <input type="checkbox" id="menu" hidden />
         <nav>
-          <ul>
+          <ul class="list-links">
             <li>
               <a href="blog.html" title="Acessar Blog" target="_blank">Blog</a>
             </li>
