Finaliza estilização do header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
   </head>
   <body>
     <header>
-      <a href="index.html" title="Voltar para a página inicial" class="logo"
-        ><img
+      <a href="index.html" title="Voltar para a página inicial" class="logo">
+        <img
           src="assets/bussola-jornada-branca.png"
-          alt="Bussola do logo Jornada Viagens na cor preta"
-      /></a>
+          alt="Bussola do logo Jornada Viagens na cor branca"
+          class="img-mobile"
+        />
+        <img
+          src="assets/bussola-texto-jornada-branco.png"
+          alt="Logo Jornada Viagens na cor branca"
+          class="img-desktop"
+        />
+      </a>
       <div class="navigation-menu">
         <label for="menu"><img src="assets/menu.png" alt="Menu" /></label>
         <input type="checkbox" id="menu" hidden />
