--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <hr />
       </div>
       <div class="offers-cards">
-        <article class="card">
+        <article class="card card-japao">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -69,7 +69,7 @@
           </header>
           <footer><a href="#" class="button">Ver detalhes</a></footer>
         </article>
-        <article class="card">
+        <article class="card card-andreas">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -79,7 +79,7 @@
           </header>
           <footer><a href="#" class="button">Ver detalhes</a></footer>
         </article>
-        <article class="card">
+        <article class="card card-paraiba">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -89,7 +89,7 @@
           </header>
           <footer><a href="#" class="button">Ver detalhes</a></footer>
         </article>
-        <article class="card">
+        <article class="card card-manaus">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
