--- a/index.html
+++ b/index.html
@@ -101,11 +101,46 @@
         </article>
       </div>
     </section>
-    <!-- <section class="categories">
+    <section class="categories">
       <div class="section-title">
         <h2>Busque por categoria</h2>
         <hr />
       </div>
-    </section> -->
+      <div class="category-cards">
+        <article class="card-category">
+          <header>
+            <img
+              src="assets/pacotes-nacionais.png"
+              alt="Icone da categoria pacotes nacionais"
+            />
+          </header>
+          <footer><h3>Pacotes Nacionais</h3></footer>
+        </article>
+        <article class="card-category">
+          <header>
+            <img
+              src="assets/pacotes-interacionais.png"
+              alt="Icone da categoria pacotes internacionais"
+            />
+          </header>
+          <footer><h3>Pacotes Internacionais</h3></footer>
+        </article>
+        <article class="card-category">
+          <header>
+            <img src="assets/transfer.png" alt="Icone da categoria transfer" />
+          </header>
+          <footer><h3>Transfer</h3></footer>
+        </article>
+        <article class="card-category">
+          <header>
+            <img
+              src="assets/seguro-viagem.png"
+              alt="Icone da categoria seguro-viagem"
+            />
+          </header>
+          <footer><h3>Seguro Viagem</h3></footer>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
