Adiciona media queries a sessao de busca por categorias

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
               alt="Icone da categoria pacotes nacionais"
             />
           </header>
-          <footer><h3>Pacotes Nacionais</h3></footer>
+          <footer>
+            <a href="#">Pacotes Nacionais</a>
+          </footer>
         </article>
         <article class="card-category">
           <header>
@@ -123,13 +125,17 @@
               alt="Icone da categoria pacotes internacionais"
             />
           </header>
-          <footer><h3>Pacotes Internacionais</h3></footer>
+          <footer>
+            <a href="#">Pacotes Internacionais</a>
+          </footer>
         </article>
         <article class="card-category">
           <header>
             <img src="assets/transfer.png" alt="Icone da categoria transfer" />
           </header>
-          <footer><h3>Transfer</h3></footer>
+          <footer>
+            <a href="#">Transfer</a>
+          </footer>
         </article>
         <article class="card-category">
           <header>
@@ -138,7 +144,9 @@
               alt="Icone da categoria seguro-viagem"
             />
           </header>
-          <footer><h3>Seguro Viagem</h3></footer>
+          <footer>
+            <a href="#">Seguro Viagem</a>
+          </footer>
         </article>
       </div>
     </section>
