Torna os cards clicaveis

--- a/index.html
+++ b/index.html
@@ -108,45 +108,37 @@
       </div>
       <div class="category-cards">
         <article class="card-category">
-          <header>
+          <a href="#">
             <img
               src="assets/pacotes-nacionais.png"
               alt="Icone da categoria pacotes nacionais"
             />
-          </header>
-          <footer>
-            <a href="#">Pacotes Nacionais</a>
-          </footer>
+            <h3>Pacotes Nacionais</h3></a
+          >
         </article>
         <article class="card-category">
-          <header>
+          <a href="#">
             <img
               src="assets/pacotes-interacionais.png"
               alt="Icone da categoria pacotes internacionais"
             />
-          </header>
-          <footer>
-            <a href="#">Pacotes Internacionais</a>
-          </footer>
+            <h3>Pacotes Internacionais</h3>
+          </a>
         </article>
         <article class="card-category">
-          <header>
+          <a href="#">
             <img src="assets/transfer.png" alt="Icone da categoria transfer" />
-          </header>
-          <footer>
-            <a href="#">Transfer</a>
-          </footer>
+            <h3>Transfer</h3>
+          </a>
         </article>
         <article class="card-category">
-          <header>
+          <a href="">
             <img
               src="assets/seguro-viagem.png"
               alt="Icone da categoria seguro-viagem"
             />
-          </header>
-          <footer>
-            <a href="#">Seguro Viagem</a>
-          </footer>
+            <h3>Seguro Viagem</h3>
+          </a>
         </article>
       </div>
     </section>
