Finaliza sessao busca por categorias

--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
       </div>
       <div class="category-cards">
         <article class="card-category">
-          <a href="#">
+          <a
+            href="#"
+            target="_blank"
+            title="Busque pela categoria pacotes nacionais"
+          >
             <img
               src="assets/pacotes-nacionais.png"
               alt="Icone da categoria pacotes nacionais"
@@ -117,7 +121,11 @@
           >
         </article>
         <article class="card-category">
-          <a href="#">
+          <a
+            href="#"
+            target="_blank"
+            title="Busque pela categoria pacotes internacionais"
+          >
             <img
               src="assets/pacotes-interacionais.png"
               alt="Icone da categoria pacotes internacionais"
@@ -126,13 +134,17 @@
           </a>
         </article>
         <article class="card-category">
-          <a href="#">
+          <a href="#" target="_blank" title="Busque pela categoria transfer">
             <img src="assets/transfer.png" alt="Icone da categoria transfer" />
             <h3>Transfer</h3>
           </a>
         </article>
         <article class="card-category">
-          <a href="">
+          <a
+            href="#"
+            target="_blank"
+            title="Busque pela categoria seguro viagem"
+          >
             <img
               src="assets/seguro-viagem.png"
               alt="Icone da categoria seguro-viagem"
