--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="destinations-items">
         <article class="item">
           <header>
-            <div class="img-item"></div>
+            <div class="img-item tokyo"></div>
             <h4>Tokyo</h4>
           </header>
           <p>
@@ -174,7 +174,7 @@
         </article>
         <article class="item">
           <header>
-            <div class="img-item"></div>
+            <div class="img-item osaka"></div>
             <h4>Osaka</h4>
           </header>
           <p>
