Adiciona estilo para o banner na versao mobile

--- a/index.html
+++ b/index.html
@@ -290,5 +290,8 @@
         </article>
       </div>
     </section>
+    <section class="banner-footer">
+      <div class="banner-img"></div>
+    </section>
   </body>
 </html>
