--- a/index.html
+++ b/index.html
@@ -293,5 +293,38 @@
     <section class="banner-footer">
       <div class="banner-img"></div>
     </section>
+    <section class="footer">
+      <header>
+        <img
+          src="assets/logo-footer.png"
+          alt="Logo do Jornada viagens"
+          class="footer__logo"
+        />
+        <div>
+          <p>Horário de atendimento: 08h - 20h (Segunda a Sábado)</p>
+          <p>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</p>
+        </div>
+      </header>
+      <footer>
+        <p>Acesse nossas redes:</p>
+        <div>
+          <img
+            src="assets/logo-whatsapp.png"
+            alt="Logo do Whatsapp"
+            class="redes-sociais"
+          />
+          <img
+            src="assets/logo-instagram.png"
+            alt="Logo do Instagram"
+            class="redes-sociais"
+          />
+          <img
+            src="assets/logo-twiter.png"
+            alt="Logo do Twiter"
+            class="redes-sociais"
+          />
+        </div>
+      </footer>
+    </section>
   </body>
 </html>
