Finaliza estilos do footer da versao mobile

--- a/index.html
+++ b/index.html
@@ -307,21 +307,21 @@
       </header>
       <footer>
         <p>Acesse nossas redes:</p>
-        <div>
+        <div class="redes-sociais">
           <img
             src="assets/logo-whatsapp.png"
             alt="Logo do Whatsapp"
-            class="redes-sociais"
+            class="redes-sociais-img"
           />
           <img
             src="assets/logo-instagram.png"
             alt="Logo do Instagram"
-            class="redes-sociais"
+            class="redes-sociais-img"
           />
           <img
             src="assets/logo-twiter.png"
             alt="Logo do Twiter"
-            class="redes-sociais"
+            class="redes-sociais-img"
           />
         </div>
       </footer>
