Transforma as logos das redes sociais em links

--- a/index.html
+++ b/index.html
@@ -308,21 +308,30 @@
       <footer>
         <p>Acesse nossas redes:</p>
         <div class="redes-sociais">
-          <img
-            src="assets/logo-whatsapp.png"
-            alt="Logo do Whatsapp"
-            class="redes-sociais-img"
-          />
-          <img
-            src="assets/logo-instagram.png"
-            alt="Logo do Instagram"
-            class="redes-sociais-img"
-          />
-          <img
-            src="assets/logo-twiter.png"
-            alt="Logo do Twiter"
-            class="redes-sociais-img"
-          />
+          <a
+            href="#"
+            target="_blank"
+            title="Acesse o Whatsapp do Jornada Viagens"
+            ><img
+              src="assets/logo-whatsapp.png"
+              alt="Logo do Whatsapp"
+              class="redes-sociais-img"
+          /></a>
+          <a
+            href="#"
+            target="_blank"
+            title="Acesse o Instagram do Jornada Viagens"
+            ><img
+              src="assets/logo-instagram.png"
+              alt="Logo do Instagram"
+              class="redes-sociais-img"
+          /></a>
+          <a href="#" target="_blank" title="Acesse o Twiter do Jornada Viagens"
+            ><img
+              src="assets/logo-twiter.png"
+              alt="Logo do Twiter"
+              class="redes-sociais-img"
+          /></a>
         </div>
       </footer>
     </section>
