Adiciona meta og

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
       name="description"
       content="Jornada Viagens, uma agência apaixonada por criar viagens inesquecíveis."
     />
+    <meta name="og:title" content="Jornada Viagens" />
+    <meta
+      name="og:description"
+      content="Jornada Viagens, uma agência apaixonada por criar viagens inesquecíveis."
+    />
+    <meta
+      name="og:image"
+      content="https://jornada-viagens-tan.vercel.app/assets/logo-footer.png"
+    />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://jornada-viagens-tan.vercel.app/" />
     <link rel="icon" href="favico.svg" type="xml/svg" />
     <link rel="stylesheet" href="style/style.css" />
     <title>Jornada Viagens</title>
