--- a/pacotes.html
+++ b/pacotes.html
@@ -3,23 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Jornada Viagens, uma agência apaixonada por criar viagens inesquecíveis."
-    />
-    <meta name="og:title" content="Jornada Viagens" />
-    <meta
-      name="og:description"
-      content="Jornada Viagens, uma agência apaixonada por criar viagens inesquecíveis."
-    />
-    <meta
-      name="og:image"
-      content="https://jornada-viagens-tan.vercel.app/assets/logo-footer.png"
-    />
-    <meta name="og:type" content="website" />
-    <meta name="og:url" content="https://jornada-viagens-tan.vercel.app/" />
+
     <link rel="icon" href="favico.svg" type="xml/svg" />
     <link rel="stylesheet" href="style/style.css" />
+
     <title>Pacotes de viagem</title>
   </head>
   <body>
@@ -61,5 +48,17 @@
         </nav>
       </div>
     </header>
+    <section class="hero">
+      <div class="hero-img pacotes-viagem">
+        <div class="section-title">
+          <h2>Conheça o Japão!</h2>
+          <hr />
+        </div>
+        <p>
+          A Jornada possui o pacote perfeito para seu estilo e orçamento!
+          Conheça as belas paisagens e a cultura milenar deste belo país!
+        </p>
+      </div>
+    </section>
   </body>
 </html>
