--- a/pacotes.html
+++ b/pacotes.html
@@ -92,5 +92,26 @@
         </article>
       </div>
     </section>
+    <section class="payments">
+      <div class="section-title">
+        <h2>Pagamento</h2>
+        <hr />
+      </div>
+      <div class="content-container">
+        <div class="text-content">
+          <h3 class="pacotes-preco">R$4000</h3>
+          <h4 class="pacotes-parcelas">Em até 12x!</h3>
+          <p class="content-text">
+            Viaje pagando em até 12 parcelas no cartão, à vista no crédito com 5% de desconto ou no Pix com 10% de desconto! 
+          </p>
+          <a href="#" class="button">Ver detalhes</a>
+        </div>
+        <div class="image content">
+          <div class="image img1"></div>
+          <div class="image img2"></div>
+          <div class="image img3"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
