--- a/pacotes.html
+++ b/pacotes.html
@@ -193,5 +193,50 @@
         </article>
       </div>
     </section>
+    <section class="banner-footer">
+      <div class="banner-img-pacotes"></div>
+    </section>
+    <section class="footer">
+      <header>
+        <img
+          src="assets/logo-footer.png"
+          alt="Logo do Jornada viagens"
+          class="footer__logo"
+        />
+        <div>
+          <p>Horário de atendimento: 08h - 20h (Segunda a Sábado)</p>
+          <p>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</p>
+        </div>
+      </header>
+      <footer>
+        <p>Acesse nossas redes:</p>
+        <div class="redes-sociais">
+          <a
+            href="#"
+            target="_blank"
+            title="Acesse o Whatsapp do Jornada Viagens"
+            ><img
+              src="assets/logo-whatsapp.png"
+              alt="Logo do Whatsapp"
+              class="redes-sociais-img"
+          /></a>
+          <a
+            href="#"
+            target="_blank"
+            title="Acesse o Instagram do Jornada Viagens"
+            ><img
+              src="assets/logo-instagram.png"
+              alt="Logo do Instagram"
+              class="redes-sociais-img"
+          /></a>
+          <a href="#" target="_blank" title="Acesse o Twiter do Jornada Viagens"
+            ><img
+              src="assets/logo-twiter.png"
+              alt="Logo do Twiter"
+              class="redes-sociais-img"
+          /></a>
+        </div>
+      </footer>
+    </section>
   </body>
 </html>
