--- a/pacotes.html
+++ b/pacotes.html
@@ -33,6 +33,7 @@
             </li>
             <li>
               <a
+                class="active"
                 href="pacotes.html"
                 title="Acessar Pacotes de viagem"
                 target="_blank"
